# mlx-models

./: .gitignore  .mcp.json  1PASSWORD_GUIDE.md  1PASSWORD_UPLOAD_CHECKLIST.md  =2.9  AGENT_5_FINAL_PACKAGE.md  AGENT_E_FINAL_OUTPUT.txt  CLAUDE.md  CODE_EDITOR_INTEGRATION.md  COMPLETE_MODEL_CATALOG.md  CONSOLIDATED_INVENTORY.md  DATA_PIPELINE_VALIDATION_REPORT.md  EXPECTED_RESULTS_TEMPLATE.md  FINAL_OPTIMIZED_COLLECTION.md  FINAL_PERFORMANCE_TABLE.md  FIX_MODELS.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION_COMPLETE.txt  INTEGRATION_SUCCESS_SUMMARY.md  LM_STUDIO_CLI_GUIDE.md  LM_STUDIO_OPTIMIZATION.md  LOCAL_AI_DEEP_DIVE_MANUAL.md  MLX_MODELS_SETUP_GUIDE.md  MODEL_USE_CASES.md  OPENCODE_CONFIG_SUMMARY.md  OPENCODE_EXAMPLES.md  OPENCODE_INTEGRATION_TEST_REPORT.md  OPENCODE_OPTIMAL_CONFIG.md  OPENCODE_QUICK_START.md  OPTIMIZATION_GUIDE.md  OUTLIER_POLICY.md  PERFORMANCE_COMPARISON_REPORT.md  PROMPTING_GUIDE_JOSIEFIED_8B_32K.md  QUICK_COMPARISON.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_START.md  QUICK_START_SPECULATIVE.md  QUICK_START_SPECULATIVE_DECODING.md  QUICK_TEST_COMMANDS.md  (+74 more)
.claude/: COMPLETE_SETUP_GUIDE.md  PLUGIN_SETUP.md  README.md  auto_commit_watcher.sh  backup_ignored_files.sh  settings.json  smart_auto_commit.sh
mcp-local-agent/: claude_code_settings.json  claude_desktop_config.json  pyproject.toml  server.py
mlx/: Josiefied-Qwen3-14B-abliterated-v3-6bit
mlx-server/: server.py  start.sh
presets/: README.md  speculative-balanced.sh  speculative-fast.sh  speculative-max.sh
presets/prompts/: anti-refusal.txt  expert.txt
(+2 files in other folders)
