[project]
name = "mcp-local-agent"
version = "1.0.0"
description = "MCP server that delegates tasks to a local LM Studio instance"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
]

[project.scripts]
mcp-local-agent = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
